--- a/WEBAPP/src/main/resources/WEB/style.css
+++ b/WEBAPP/src/main/resources/WEB/style.css
@@ -1,7 +1,4 @@
-html {
-		background-color: #fdfdfd;
 
-}
 
 header {
 	position: absolute;
@@ -45,7 +42,6 @@ div {
 	margin: auto;
 	text-align:center;
 	padding-top: 4%;
-		background-color: #fdfdfd;
 
 }
 
@@ -54,34 +50,11 @@ div img {
 	height: auto;
 	margin:5px;
 	padding-bottom: 3%;
-		background-color: #fdfdfd;
 
 }
 
 
 
-.button {
-	border: 1px solid #d3d3d3;
-	background: #f3f3f3;
-	color:#696969;
-	margin-left:4px;
-	margin-right:4px;
-	margin-top: 15px;
-	font-family: arial, sans-serif;
-	font-size: 11px;
-	font-weight: bold;
-	padding: 7px;
-	border-radius:2px;
-}
-
-.button:hover {
-	color: #2a2a2a;
-	border: 1px solid #bdbdbd;
-}
-
-.search:hover {
-	border:1px solid rgb(0, 0, 255);
-}
 
 footer {
 	position: absolute;
@@ -134,7 +107,7 @@ input[type=text]::-ms-reveal {  display: none; width : 0; height: 0; }
     margin-bottom: auto;
     margin-top: auto;
     height: 60px;
-    background-color: #353b48;
+    background-color: #494d57;
     border-radius: 30px;
 	padding: 10px;
 	width: 38%;
@@ -172,4 +145,24 @@ input[type=text]::-ms-reveal {  display: none; width : 0; height: 0; }
     align-items: center;
     border-radius: 50%;
     color:white;
-    }
+	}
+	
+
+.btnCol {
+	
+	border-radius: 10px;
+	border: 3px solid rgb(192, 6, 6);
+	padding: 3px; 
+	width: 7em;
+	height: auto;
+		background-color: transparent;
+		    color: #c81400;
+
+  
+}
+
+
+
+
+
+
